deployment/ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streamlit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: streamlit
  template:
    metadata:
      labels:
        app: streamlit
    spec:
      containers:
        - name: streamlit
          image: vkd/content-assistant-ui:0.0.13
          ports:
            - containerPort: 8501
          resources:
            requests:
              memory: "250Mi"
              cpu: "250m"
