deployment/service_ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: streamlit-svc
spec:
  selector:
    app: streamlit
  ports:
    - protocol: TCP
      port: 8501
      targetPort: 8501
