deployment/autoscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: advertisertextgeneration.info
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: fastapi-svc
            port:
              number: 8080
